<!-- ADMINISTRADOR DE PUERTAS -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="start"
        android:orientation="vertical"
        tools:ignore="InefficientWeight,UselessParent">

        <!-- Título "puertas agregadas" con línea inferior -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/puertas_agregadas"
            android:textColor="@color/text"
            android:textSize="40sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="35dp"
            android:layout_marginEnd="45dp"
            android:layout_marginStart="45dp"
            android:background="@color/Purple" />

        <!-- Tabla 3x3 con iconos de puertas y texto -->
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rowCount="3"
            android:columnCount="3"
            android:layout_gravity="center"
            android:padding="16dp">

            <!-- Fila 1 -->
            <LinearLayout
                android:layout_width="0dp"
                android:contentDescription="TODO"
                android:importantForAccessibility="no"
                android:paddingBottom="40dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_columnWeight="1"
                android:gravity="center"
                tools:ignore="HardcodedText,UseCompoundDrawables">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/door_icon"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/puerta_patio"
                    android:textSize="16sp"
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                android:paddingBottom="40dp"
                android:orientation="vertical"
                android:layout_columnWeight="1"
                android:gravity="center"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/door_icon"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/puerta_2"
                    android:textSize="16sp"
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                android:paddingBottom="40dp"
                android:orientation="vertical"
                android:layout_columnWeight="1"
                android:gravity="center"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/door_icon"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/puerta_3"
                    android:textSize="16sp"
                    android:gravity="center" />
            </LinearLayout>

            <!-- Fila 2 -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                android:paddingBottom="40dp"
                android:orientation="vertical"
                android:layout_columnWeight="1"
                android:gravity="center"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/door_icon"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/puerta_4"
                    android:textSize="16sp"
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                android:paddingBottom="40dp"
                android:orientation="vertical"
                android:layout_columnWeight="1"
                android:gravity="center"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/door_icon"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/puerta_5"
                    android:textSize="16sp"
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                android:paddingBottom="40dp"
                android:orientation="vertical"
                android:layout_columnWeight="1"
                android:gravity="center"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/door_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/puerta_6"
                    android:textSize="16sp"
                    android:gravity="center" />
            </LinearLayout>

            <!-- Fila 3 -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="40dp"
                android:orientation="vertical"
                android:layout_columnWeight="1"
                android:gravity="center"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/sum_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/puerta_7"
                    android:textSize="16sp"
                    android:gravity="center" />
            </LinearLayout>


        </GridLayout>

    </LinearLayout>

</LinearLayout>
