<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/disp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dispositivos_disponibles"
        android:layout_marginTop="50dp"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/disp">

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="31sp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/dispositivo_1"
            android:textSize="20sp"
            app:checked="true" />

        <ImageView
            android:id="@+id/imageDispositivo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20sp"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:contentDescription="@null"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/dispositivo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="31sp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/dispositivo_2"
            android:textSize="20sp"
            app:checked="true" />

        <ImageView
            android:id="@+id/imageDispositivo2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20sp"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:contentDescription="@null"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/dispositivo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <Button
            android:id="@+id/buttonHecho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#954ffd"
            android:text="@string/hecho"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>